# iBlink

./: CMakeLists.txt  README.md  list_xml.py  start.sh  train.sh
matlab/: PCA_Feature.txt  calpca.m  randlabel.m
models/test/: PCA_Feature.txt  svm_classifier_model.xml
src/: find_bounding_box.cpp  find_bounding_box_n.cpp  lbp.hpp  make_lbp.cpp  predict_cam.cpp  predict_list.cpp  predict_single.cpp  sampling.cpp  train_svm.cpp
